Try to make filter sticky like the table headers...it sort of worked...the fixed-top navbar covers part of it.

--- a/raid/champion_helper/static/champion_helper/site_style.css
+++ b/raid/champion_helper/static/champion_helper/site_style.css
@@ -3,3 +3,5 @@
 
 th, td { padding: 8px 16px; }
 th     { background:#eee; }
+
+.stickyFilter { position: sticky; top: 0; }
